--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   geolocator: ^6.2.0
   location: ^3.0.0
   google_maps_flutter: ^0.5.30
+  smooth_page_indicator: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
