--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,13 @@ dependencies:
   location: ^3.0.0
   google_maps_flutter: ^0.5.30
   smooth_page_indicator: ^0.2.0
+  country_code_picker: ^1.7.0
+  country_picker: ^1.1.4
+  flutter_datetime_picker: ^1.5.0
+  flutter_holo_date_picker: ^0.3.1+2
 
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -57,6 +63,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
