--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.18.0
-  google_fonts: ^1.0.0
+  google_fonts: ^1.1.2
   flutter_swiper: ^1.1.6
+  flutter_spinkit: ^4.1.2+1
   sliding_up_panel: ^1.0.2
   flutter_rating_bar: ^3.2.0+1
   geolocator: ^6.2.0
@@ -36,7 +37,8 @@ dependencies:
   country_picker: ^1.1.4
   flutter_datetime_picker: ^1.5.0
   flutter_holo_date_picker: ^0.3.1+2
-
+  intl: ^0.16.1
+  font_awesome_flutter: ^8.11.0
   flutter_localizations:
     sdk: flutter
 
