--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_slidable: ^0.5.7
   toast: ^0.1.5
   prompt_dialog: ^0.1.4
+  autocomplete_textfield: ^1.7.3
   flutter_datetime_picker: ^1.5.0
   flutter_holo_date_picker: ^0.3.1+2
   intl: ^0.16.1
