--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,20 @@ dependencies:
   sliding_up_panel: ^1.0.2
   flutter_rating_bar: ^3.2.0+1
   geolocator: ^6.2.0
+  carousel_slider: ^3.0.0
+  flutter_mobile_vision: ^0.1.4+1
+  #icons
+  flutter_icons: ^1.1.0
+  ant_icons: ^1.0.0
+  ionicons: ^0.1.1
+
   location: ^3.0.0
+  firebase_ml_vision: ^0.9.7
+  translator: ^0.1.5
+
+  image_picker: ^0.6.7+11
+  clipboard: ^0.1.2+8
+
   google_maps_flutter: ^0.5.30
   smooth_page_indicator: ^0.2.0
   country_code_picker: ^1.7.0
