--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.16.1
   font_awesome_flutter: ^8.11.0
   http: ^0.12.2
+  provider: ^4.3.3
   flutter_localizations:
     sdk: flutter
 
