--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,16 @@ dependencies:
   flutter_rating_bar: ^3.2.0+1
   geolocator: ^6.2.0
   carousel_slider: ^3.0.0
-  flutter_mobile_vision: ^0.1.4+1
+  flutter_mobile_vision: ^0.1.4
   #icons
   flutter_icons: ^1.1.0
   ant_icons: ^1.0.0
   ionicons: ^0.1.1
 
   location: ^3.0.0
-  firebase_ml_vision: ^0.9.7
+  firebase_ml_vision: ^0.10.0
   translator: ^0.1.5
+  firebase_core: ^0.7.0
 
   image_picker: ^0.6.7+11
   clipboard: ^0.1.2+8
@@ -57,8 +58,6 @@ dependencies:
   intl: ^0.16.1
   font_awesome_flutter: ^8.11.0
   http: ^0.12.2
-  flutter_localizations:
-    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
