--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   country_picker: ^1.1.4
   flutter_slidable: ^0.5.7
   toast: ^0.1.5
+  provider: ^4.3.3
   prompt_dialog: ^0.1.4
   autocomplete_textfield: ^1.7.3
   flutter_datetime_picker: ^1.5.0
