--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   font_awesome_flutter: ^8.11.0
   http: ^0.12.2
   provider: ^4.3.3
+  permission_handler: ^5.1.0+2
   flutter_localizations:
     sdk: flutter
 
