--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.3
   permission_handler: ^5.1.0+2
+  flutter_secure_storage: ^3.3.5
   flutter_localizations:
     sdk: flutter
 
