--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   provider: ^4.3.3
   permission_handler: ^5.1.0+2
   flutter_secure_storage: ^3.3.5
+  shared_preferences: ^0.5.8
   flutter_localizations:
     sdk: flutter
 
