--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   geolocator: ^6.2.0
   carousel_slider: ^3.0.0
   flutter_mobile_vision: ^0.1.4
+  url_launcher: ^5.7.10
+
   #icons
   flutter_icons: ^1.1.0
   ant_icons: ^1.0.0
