--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,12 +16,14 @@
         android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="graduation_project"
         android:icon="@mipmap/ic_launcher">
+        <service android:name=".AppService"/>
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD0r9-PDf_iRZH1Kkf6LqyuSnUkw1bJBJ8"/>
         <activity
