--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sliding_up_panel: ^1.0.2
   flutter_rating_bar: ^3.2.0+1
   geolocator: ^6.2.0
+  fading_edge_scrollview: ^1.1.4
   carousel_slider: ^3.0.0
   flutter_mobile_vision: ^0.1.4
   url_launcher: ^5.7.10
