initial commit for camera

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,14 @@
     	<string>fetch</string>
     	<string>location</string>
     </array>
+	<key>NSCameraUsageDescription</key>
+    <string>Enable myApp to access your camera to capture your photo</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Enable myApp to access mic to record your voice</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <key>NSCameraUsageDescription </key>
+    <key>NSMicrophoneUsageDescription </key>
+    <string>this app needs to use photos</string>
 
 
 </dict>
