--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,11 +17,16 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-feature android:name="android.hardware.camera.flash" />
+    <uses-feature android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="graduation_project"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher">
         <service android:name=".AppService"/>
         <meta-data android:name="com.google.android.geo.API_KEY"
