--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   intl: ^0.16.1
   font_awesome_flutter: ^8.11.0
   http: ^0.12.2
+  sqflite: ^1.3.2+2
   provider: ^4.3.3
   permission_handler: ^5.1.0+2
   flutter_secure_storage: ^3.3.5
