--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.18.0
+  jiffy: ^2.2.0
   google_fonts: ^1.1.2
   flutter_swiper: ^1.1.6
   #background_location: ^0.3.0
