--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   carousel_slider: ^3.0.0
   flutter_mobile_vision: ^0.1.4
   url_launcher: ^5.7.10
+  filter_list: ^0.0.1
+
   camera: ^0.7.0+2
   image_gallery_saver:
   share: ^0.6.5+4
